# pyverifactu

./: .gitignore  CLAUDE.md  INSTALLATION.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
src/verifactu/: __init__.py
src/verifactu/exceptions/: __init__.py  aeat_exception.py  invalid_model_exception.py
src/verifactu/models/: __init__.py  computer_system.py  model.py
src/verifactu/models/queries/: __init__.py  query_filter.py  query_period.py
src/verifactu/models/records/: __init__.py  breakdown_details.py  cancellation_record.py  corrective_type.py  fiscal_identifier.py  foreign_fiscal_identifier.py  foreign_id_type.py  invoice_identifier.py  invoice_type.py  operation_type.py  record.py  regime_type.py  registration_record.py  tax_type.py
src/verifactu/models/responses/: __init__.py  aeat_response.py  item_status.py  query_record_status.py  query_response.py  query_response_item.py  record_type.py  response_item.py  response_status.py
src/verifactu/services/: __init__.py  aeat_client.py
tests/models/: test_model.py
tests/models/queries/: test_query_filter.py
tests/models/records/: test_breakdown_details.py  test_cancellation_record.py  test_invoice_identifier.py  test_operation_type.py  test_registration_record.py
tests/models/responses/: test_query_response.py
tests/services/: test_aeat_client.py  test_aeat_client_query.py
